add display option

--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,14 @@
 {
   "name": "APV",
   "short_name": "APV",
-  "start_url": "/index.html",
+  "start_url": "/47-ServiceWorkers-PWA/index.html",
   "background_color": "#D41872",
   "theme_color": "#D41872",
+  "display": "standalone",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "img/icons/Icon-72",
+      "src": "img/icons/Icon-72.png",
       "type": "image/png",
       "sizes": "72x72"
     },
